Fix alignment of button

--- a/styles.css
+++ b/styles.css
@@ -220,6 +220,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0 48px;
     /*margin: 0 64px;*/
 }
 
